crates/ir/tests/ir/snapshots/main__ir__lower__modules__multi_param_orphan_trait_local.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__multi_param_orphan_trait_local

trait MyConvert[k8] { my_convert(k8): l8 }
instance modules__multi_param_orphan_trait_local.MyConvert[Int$$String] { my_convert=MyConvert$$Int$$String$$my_convert }
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn main() -> Unit =
  ()

fn MyConvert$$Int$$String$$my_convert(v0: Int) -> ~String =
  "ok"
