crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_call_qualified_bypass.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_call_qualified_bypass

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import vec_mod/length as __qual$vec_mod$length(Vec[Int]) -> Int
import vec_mod/fold as __qual$vec_mod$fold(Vec[Int], Int, (Int, Int) -> Int) -> Int
import list_mod/length as length(List[Int]) -> Int
declare __qual$vec_mod$length: (Vec[Int]) -> Int

fn test(v0: Vec[Int]) -> Int =
  let v1: Int = call __qual$vec_mod$length(v0)
  v1
