crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_call_resolve_fold.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_call_resolve_fold

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import vec_mod/fold as fold(Vec[Int], Int, (Int, Int) -> Int) -> Int
import list_mod/fold as fold(List[Int], Int, (Int, Int) -> Int) -> Int
declare fold: (List[Int], Int, (Int, Int) -> Int) -> Int

fn test(v0: List[Int]) -> Int =
  let v4: (Int, Int) -> Int = make_closure(lambda$26, [])
  let v5: Int = call fold(v0, 0, v4)
  v5

fn lambda$26(v1: Int, v2: Int) -> Int =
  let v3: Int = add_int(v1, v2)
  v3
