crates/ir/tests/ir/snapshots/main__ir__lower__modules__overload_deferred_dual.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module modules__overload_deferred_dual

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import vec_mod/length as length(Vec[Int]) -> Int
import vec_mod/fold as fold(Vec[Int], Int, (Int, Int) -> Int) -> Int
import list_mod/length as length(List[Int]) -> Int
import list_mod/fold as fold(List[Int], Int, (Int, Int) -> Int) -> Int
declare fold: (Vec[Int], Int, (Int, Int) -> Int) -> Int
declare length: (Vec[Int]) -> Int

fn example(v0: Vec[Int]) -> Int =
  let v1: Int = call length(v0)
  let v6: (Int, Int) -> Int = make_closure(lambda$29, [])
  let v2: Int = call fold(v0, 0, v6)
  let v7: Int = add_int(v1, v2)
  v7

fn lambda$29(v3: Int, v4: Int) -> Int =
  let v5: Int = add_int(v3, v4)
  v5
